BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/CSV_FieldMappings__mdt.object-meta.xml
<CustomObject>
    <description>CSV_FieldMappings</description>
    <label>CSV_FieldMapping</label>
    <pluralLabel>CSV_FieldMappings</pluralLabel>
</CustomObject>