BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/fields/CSV_DataType__c.field-meta.xml
<CustomField>
    <fullName>CSV_DataType__c</fullName>
    <label>DataType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>