BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/fields/CSV_Header__c.field-meta.xml
<CustomField>
    <fullName>CSV_Header__c</fullName>
    <description>CSV_Header</description>
    <inlineHelpText>CSV_Header</inlineHelpText>
    <label>CSV_Header</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>