BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/fields/CSV_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>CSV_ObjectName__c</fullName>
    <description>CSV_ObjectName</description>
    <inlineHelpText>CSV_ObjectName</inlineHelpText>
    <label>ObjectName</label>
    <referenceTo>CSV_ObjectMapping__mdt</referenceTo>
    <relationshipLabel>CSV_FieldMappings</relationshipLabel>
    <relationshipName>CSV_FieldMapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>