BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/fields/CSV_SalesforceFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>CSV_SalesforceFieldAPI__c</fullName>
    <description>CSV_SalesforceFieldAPI</description>
    <inlineHelpText>CSV_SalesforceFieldAPI</inlineHelpText>
    <label>Salesforce Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>