BradkenProduction/force-app/main/default/objects/CSV_FieldMappings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CSV_Header__c</columns>
    <columns>CSV_DataType__c</columns>
    <columns>CSV_ObjectName__c</columns>
    <columns>CSV_SalesforceFieldAPI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>